futoshiki/core/output.txt
cargo :     Checking
 futoshiki-core v0.1
.0 (D:\mini-games\fu
toshiki\core)
위치 줄:1 문자:1
+ cargo check 2>&1 |
 Out-File -Encoding 
utf8 output.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo  
            : NotSpe
ci    fied: (    Che
cki    ng fu...futos
hiki    \core):Strin
g) []    , RemoteExc
eption
    + FullyQualified
E    rrorId : Native
Co    mmandError
 
warning: unused impo
rt: `Grid`
 --> src\generator.r
s:1:27
  |
1 | use crate::sudok
u::{self, Grid};
  |                 
          ^^^^
  |
  = note: `#[warn(un
used_imports)]` on b
y default

error[E0277]: the tr
ait bound `[i8; 81]:
 serde::Serialize` i
s not satisfied
    --> src\futoshik
i.rs:26:10
     |
26   | #[derive(Seri
alize, Deserialize)]
     |          ^^^^
^^^^^ the trait `Ser
ialize` is not imple
mented for `[i8; 81]
`
27   | pub struct Pu
zzle {
28   |     pub grid:
 [i8; 81], // Initia
l numbers. -1 for em
pty.
     |     --- requi
red by a bound intro
duced by this call
     |
     = note: for loc
al types consider ad
ding `#[derive(serde
::Serialize)]` to yo
ur `[i8; 81]` type
     = note: for typ
es from other crates
 check whether the c
rate offers a `serde
` feature flag
     = help: the fol
lowing other types i
mplement trait `Seri
alize`:
               [T; 0
]
               [T; 1
0]
               [T; 1
1]
               [T; 1
2]
               [T; 1
3]
               [T; 1
4]
               [T; 1
5]
               [T; 1
6]
             and 26 
others
note: required by a 
bound in `futoshiki:
:_::_serde::ser::Ser
ializeStruct::serial
ize_field`
    --> C:\Users\wnw
og\.cargo\registry\s
rc\index.crates.io-1
949cf8c6b5b557f\serd
e_core-1.0.228\src\s
er\mod.rs:1917:21
     |
1915 |     fn serial
ize_field<T>(&mut se
lf, key: &'static st
r, value: &T) -> Res
ult<(), Self::Error>
     |        ------
--------- required b
y a bound in this as
sociated function
1916 |     where
1917 |         T: ?S
ized + Serialize;
     |              
       ^^^^^^^^^ req
uired by this bound 
in `SerializeStruct:
:serialize_field`
     = note: this er
ror originates in th
e derive macro `Seri
alize` (in Nightly b
uilds, run with -Z m
acro-backtrace for m
ore info)

error[E0277]: the tr
ait bound `[i8; 81]:
 serde::Deserialize<
'de>` is not satisfi
ed
    --> src\futoshik
i.rs:28:15
     |
28   |     pub grid:
 [i8; 81], // Initia
l numbers. -1 for em
pty.
     |              
 ^^^^^^^^ the trait 
`Deserialize<'_>` is
 not implemented for
 `[i8; 81]`
     |
     = note: for loc
al types consider ad
ding `#[derive(serde
::Deserialize)]` to 
your `[i8; 81]` type
     = note: for typ
es from other crates
 check whether the c
rate offers a `serde
` feature flag
     = help: the fol
lowing other types i
mplement trait `Dese
rialize<'de>`:
               &[u8]
               [T; 0
]
               [T; 1
0]
               [T; 1
1]
               [T; 1
2]
               [T; 1
3]
               [T; 1
4]
               [T; 1
5]
             and 26 
others
note: required by a 
bound in `next_eleme
nt`
    --> C:\Users\wnw
og\.cargo\registry\s
rc\index.crates.io-1
949cf8c6b5b557f\serd
e_core-1.0.228\src\d
e\mod.rs:1771:12
     |
1769 |     fn next_e
lement<T>(&mut self)
 -> Result<Option<T>
, Self::Error>
     |        ------
------ required by a
 bound in this assoc
iated function
1770 |     where
1771 |         T: De
serialize<'de>,
     |            ^^
^^^^^^^^^^^^^^ requi
red by this bound in
 `SeqAccess::next_el
ement`

error[E0277]: the tr
ait bound `[i8; 81]:
 serde::Deserialize<
'de>` is not satisfi
ed
    --> src\futoshik
i.rs:28:15
     |
28   |     pub grid:
 [i8; 81], // Initia
l numbers. -1 for em
pty.
     |              
 ^^^^^^^^ the trait 
`Deserialize<'_>` is
 not implemented for
 `[i8; 81]`
     |
     = note: for loc
al types consider ad
ding `#[derive(serde
::Deserialize)]` to 
your `[i8; 81]` type
     = note: for typ
es from other crates
 check whether the c
rate offers a `serde
` feature flag
     = help: the fol
lowing other types i
mplement trait `Dese
rialize<'de>`:
               &[u8]
               [T; 0
]
               [T; 1
0]
               [T; 1
1]
               [T; 1
2]
               [T; 1
3]
               [T; 1
4]
               [T; 1
5]
             and 26 
others
note: required by a 
bound in `next_value
`
    --> C:\Users\wnw
og\.cargo\registry\s
rc\index.crates.io-1
949cf8c6b5b557f\serd
e_core-1.0.228\src\d
e\mod.rs:1916:12
     |
1914 |     fn next_v
alue<V>(&mut self) -
> Result<V, Self::Er
ror>
     |        ------
---- required by a b
ound in this associa
ted function
1915 |     where
1916 |         V: De
serialize<'de>,
     |            ^^
^^^^^^^^^^^^^^ requi
red by this bound in
 `MapAccess::next_va
lue`

error[E0277]: the tr
ait bound `[i8; 81]:
 serde::Deserialize<
'de>` is not satisfi
ed
  --> src\futoshiki.
rs:26:21
   |
26 | #[derive(Serial
ize, Deserialize)]
   |                
     ^^^^^^^^^^^ the
 trait `Deserialize<
'_>` is not implemen
ted for `[i8; 81]`
   |
   = note: for local
 types consider addi
ng `#[derive(serde::
Deserialize)]` to yo
ur `[i8; 81]` type
   = note: for types
 from other crates c
heck whether the cra
te offers a `serde` 
feature flag
   = help: the follo
wing other types imp
lement trait `Deseri
alize<'de>`:
             &[u8]
             [T; 0]
             [T; 10]
             [T; 11]
             [T; 12]
             [T; 13]
             [T; 14]
             [T; 15]
           and 26 ot
hers
note: required by a 
bound in `futoshiki:
:_::_serde::__privat
e228::de::missing_fi
eld`
  --> C:\Users\wnwog
\.cargo\registry\src
\index.crates.io-194
9cf8c6b5b557f\serde-
1.0.228\src\private\
de.rs:26:8
   |
24 | pub fn missing_
field<'de, V, E>(fie
ld: &'static str) ->
 Result<V, E>
   |        --------
----- required by a 
bound in this functi
on
25 | where
26 |     V: Deserial
ize<'de>,
   |        ^^^^^^^^
^^^^^^^^ required by
 this bound in `miss
ing_field`
   = note: this erro
r originates in the 
derive macro `Deseri
alize` (in Nightly b
uilds, run with -Z m
acro-backtrace for m
ore info)

error[E0308]: mismat
ched types
  --> src\solver.rs:
96:41
   |
96 |                
         solve_recur
sive(&next_state, co
nstraints, count, li
mit);
   |                
         -----------
---- ^^^^^^^^^^^ typ
es differ in mutabil
ity
   |                
         |
   |                
         arguments t
o this function are 
incorrect
   |
   = note: expected 
mutable reference `&
mut State`
                    
  found reference `&
State`
note: function defin
ed here
  --> src\solver.rs:
65:4
   |
65 | fn solve_recurs
ive(state: &mut Stat
e, constraints: &[In
equality], count: &m
ut usize, limit: usi
ze) {
   |    ^^^^^^^^^^^^
^^^ ----------------
-

warning: unused vari
able: `blk`
  --> src\sudoku.rs:
22:9
   |
22 |     let blk = (
row / 3) * 3 + (col 
/ 3);
   |         ^^^ hel
p: if this is intent
ional, prefix it wit
h an underscore: `_b
lk`
   |
   = note: `#[warn(u
nused_variables)]` o
n by default

warning: unused vari
able: `blk`
   --> src\solver.rs
:128:9
    |
128 |     let blk = 
(row / 3) * 3 + (col
 / 3);
    |         ^^^ he
lp: if this is inten
tional, prefix it wi
th an underscore: `_
blk`

warning: unused vari
able: `limit_bit`
   --> src\solver.rs
:218:9
    |
218 |     let limit_
bit = 1 << (val - 1)
; // e.g. val=1 -> b
it 0 (1). limit-1=0.
 mask & ~0 = mask.
    |         ^^^^^^
^^^ help: if this is
 intentional, prefix
 it with an undersco
re: `_limit_bit`

warning: variable do
es not need to be mu
table
  --> src\generator.
rs:45:10
   |
45 |     let (mut fi
xed, mut variable): 
(Vec<Inequality>, Ve
c<Inequality>) = 
   |          ----^^
^^^
   |          |
   |          help: 
remove this `mut`
   |
   = note: `#[warn(u
nused_mut)]` on by d
efault

Some errors have det
ailed explanations: 
E0277, E0308.
For more information
 about an error, try
 `rustc --explain E0
277`.
warning: `futoshiki-
core` (lib) generate
d 5 warnings
error: could not com
pile `futoshiki-core
` (lib) due to 5 pre
vious errors; 5 warn
ings emitted
